# CS50

./: .gitignore  CS50.code-workspace  Pipfile  README.md  cs50-final.code-workspace  cs50.code-workspace  cs50p.code-workspace  cs50x.code-workspace  main.py  requirements.txt  scratch.ipynb
CS50P/: Pipfile
CS50X/: .clang-format  .gitignore  prepare.sh
coke/: coke.py
cs50p/: .gitignore  Pipfile  cs50p.code-workspace  hello.c  mario.c  range_gen_test.py  scratch.ipynb
cs50p/final_project/: Pipfile  project.py  pyproject.toml  requireemnts.txt  requirements.txt  test_project.py
cs50p/final_project/game/: __init__.py
cs50p/final_project/game/abstract/: ABCPlayer.py  Board.py  Cell.py  __init__.py
cs50p/final_project/game/impl/: Board.py  Game.py  Players.py  RandomPlayer.py  __init__.py
cs50p/final_project/tests/: __init__.py
cs50p/week7/working/: pyproject.toml  test_working.py  working.py
cs50p/week7/working/mine/: working.py
cs50p/week9/final-project/: conftest.py  pyproject.toml
cs50p/week9/final-project/engine/: abstracts.py  board.py  cell.py  game.py  player.py
cs50p/week9/final-project/tests/: test_board.py  test_game.py
cs50p/week9/project/: project.py  pyproject.toml  requirements.txt  test_project.py
cs50p/week9/project/engine/: __init__.py  abstracts.py  board.py  cell.py  player.py
cs50p/week9/project/engine/cell/: __init__.py  cell.py
cs50p/week9/project/engine/player/: __init__.py  player.py
cs50p/week9/project/game/: abstracts.py  board.py  player.py  rules.py
cs50p/week9/project/src/: abstracts.py
cs50p/week9/project/tests/: __init__.py  board_test.py  cell_test.py  test_board.py  test_cell.py  test_player.py
cs50p/week9/project/tests/cell/: cell.py
cs50p/week9/project/tests/player/: player.py
cs50x/: .clang-format  .gitignore  Makefile  prepare.sh  (+3 more)
(+356 files in other folders)
