[tool.poetry]
name = "final-project"
version = "0.1.0"
description = "CS50P Final Project"
authors = ["Kostiantyn Gurianov <kguryanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
pytest-mock = "^3.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
