[tool.poetry]
name = "working"
version = "0.1.0"
description = "CS50W week 7 Working pset\u001b[D\u001b[D\u001b["
authors = ["Kostiantyn Gurianov <kguryanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
