[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["Kostiantyn Gurianov <kguryanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
